Finally created Map and managed to save the longest path into Map with K,V pair of (longestpathlength, longestpath)